# kvm-conjurer

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
conjurer/: __init__.py  auth.py  db.py  domains.py
conjurer/templates/: base.html
conjurer/templates/auth/: login.html  register.html
conjurer/templates/domains/: list.html
tests/: cloud-init.cfg  conftest.py  data.sql  test-machines-down.sh  test-machines-up.sh  test_auth.py  test_db.py  test_factory.py
tests/domains/: test_list.py
